[package]
name = "gen_ui_ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
gen_ui_types    = { path = "../gen_ui_types" }
gen_ui_runtime  = { path = "../gen_ui_runtime" }
gen_ui_protocol = { path = "../gen_ui_protocol" }
gen_ui_agent    = { path = "../gen_ui_agent" }
# Mobile is a native target (iOS/Android via frb) — native-http, never wasm-http.
gen_ui_client   = { path = "../gen_ui_client", default-features = false, features = ["native-http"] }
gen_ui_db       = { path = "../gen_ui_db", features = ["pglite"] }
gen_ui_db_graph = { path = "../gen_ui_db_graph" }
gen_ui_audio    = { path = "../gen_ui_audio" }
liter-llm.workspace = true
flutter_rust_bridge = "=2.12.0"
anyhow.workspace = true
once_cell.workspace = true
log = "0.4"

[lints.rust]
# `#[frb(...)]` expands to code guarded by `cfg(frb_expand)`, a cfg name that only
# codegen defines. Declare it expected so the pre-codegen build is warning-clean
# under `-D warnings` (the clippy inner loop).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"
