[package]
name = "gen_ui_mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
gen_ui_types   = { path = "../gen_ui_types" }
gen_ui_runtime = { path = "../gen_ui_runtime" }
async-trait.workspace = true
serde.workspace       = true
serde_json.workspace  = true
futures.workspace     = true
parking_lot.workspace = true
reqwest.workspace     = true
tracing.workspace     = true
reqwest-eventsource.workspace = true

[features]
default = []
# stdio transport spawns a child process — native-only, opt-in (Claude Desktop etc.).
stdio = []
