[package]
name = "knowme-web-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
gen_ui_runtime = { path = "../gen_ui_runtime" }
gen_ui_host = { path = "../gen_ui_host" }
gen_ui_server_axum = { path = "../gen_ui_server_axum" }
axum.workspace = true
tokio = { workspace = true, features = ["net", "fs"] }
rust-embed.workspace = true
mime_guess.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
