[package]
name = "tauri-plugin-gen-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

links = "tauri-plugin-gen-ui"

[dependencies]
gen_ui_types    = { path = "../gen_ui_types" }
gen_ui_runtime  = { path = "../gen_ui_runtime" }
gen_ui_protocol = { path = "../gen_ui_protocol" }
gen_ui_agent    = { path = "../gen_ui_agent" }
gen_ui_host     = { path = "../gen_ui_host" }
gen_ui_db       = { path = "../gen_ui_db", features = ["pglite"] }
gen_ui_db_graph = { path = "../gen_ui_db_graph", features = ["embed-native"] }
gen_ui_audio    = { path = "../gen_ui_audio" }
# Desktop and mobile use the same pinned/checksummed llama.cpp catalog model for
# a genuinely zero-configuration local lane. Mistral remains an optional engine
# in gen_ui_inference, but it is not allowed to block the reference app's first run.
gen_ui_inference = { path = "../gen_ui_inference", features = ["local-llama"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
once_cell.workspace = true
async-trait.workspace = true
keyring.workspace = true
log = "0.4"
tracing.workspace = true
tauri = { version = "2", default-features = false }
tokio = { workspace = true, features = ["time"] }
sqlx.workspace = true

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[package.metadata.docs.rs]
# Desktop plugin: never built for mobile/wasm targets.
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
